# skills-repository

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  TASKS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: API.md  upstream-sync.md
docs/plans/: 2026-03-09-phase-2-closure-plan.md  2026-03-09-phase-2-feature-development-plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http_client.rs  lib.rs
src-tauri/src/adapters/: market.rs  mod.rs
src-tauri/src/commands/: app.rs
src-tauri/src/domain/: agent_registry.rs  app_state.rs  mod.rs  types.rs
src-tauri/src/repositories/: db.rs  security.rs  settings.rs  skills.rs  templates.rs
src-tauri/src/repositories/skills/: install.rs  metadata.rs  tests.rs
src-tauri/src/security/: mod.rs
src-tauri/src/services/: agent_scan.rs  bootstrap.rs  distribution.rs  fs_utils.rs  install.rs  market.rs  mod.rs  project_distribution.rs  repository.rs  repository_import.rs  repository_update.rs  scan.rs  settings.rs  source_reference.rs  templates.rs
src-tauri/src/services/repository_update/: tests.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/utils/: mod.rs
src/app/: router.tsx
src/components/: ProjectDistributionFields.tsx  RepositoryDistributeModal.tsx  RepositoryImportModal.tsx  TemplateEditorModal.tsx  (+1 more)
tests/: repository-delete-confirmation.test.mjs  repository-delete-i18n.test.mjs  repository-description-display.test.mjs  repository-path-display.test.mjs  security-i18n.test.mjs  source-link-opening.test.mjs
(+26 files in other folders)
