[package]
name = "skills-manager"
version = "0.1.0"
description = "skills管理器 desktop shell"
authors = ["vibecoding-project"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
dark-light = "2.0"
dirs = "6.0"
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }
ureq = "2.12"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
tauri-plugin-opener = "2"

[dev-dependencies]
tempfile = "3.23"
